--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "standard": "^8.6.0"
   },
   "dependencies": {
+    "material-design-lite": "^1.3.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
